--- a/sb_erp/src/main/resources/templates/account/userEdit.html
+++ b/sb_erp/src/main/resources/templates/account/userEdit.html
@@ -19,7 +19,6 @@
 		<div class="x-body">
 			<form id="form1" class="layui-form" th:object="${user}">
 				<input type="hidden" name="userId" th:value="${user.userId}" />
-				<input type="hidden" name="userStatus" th:value="${user.userStatus}" />
 				<div class="layui-form-item">
 					<label for="L_username" class="layui-form-label"> <span
 						class="x-red">*</span>账号
@@ -115,13 +114,13 @@
 					</div>
 				</div>
 				<div class="layui-form-item">
-					<label for="username" class="layui-form-label"> <span
-						class="x-red">*</span>部门安排
+					<label for="username" class="layui-form-label">
+						<span class="x-red">*</span>部门安排
 					</label>
 					<div class="layui-input-inline">
 						<select name="userDepartement" lay-filter="departSelect">
 							<option th:each="depart:${departments}" 
-								th:select="${depart.departName} == ${user.userDepartement}" 
+								th:selected="${depart.departName eq user.userDepartement}" 
 								th:value="${depart.departName}" th:text="${depart.departName}"/>
 						</select>
 					</div>
@@ -133,9 +132,20 @@
 					<div class="layui-input-inline">
 						<select name="userPosition" lay-filter="positionSelect">
 							<option th:each="position:${positions}" 
-								th:select="${position.positionName} == ${user.userPosition}" 
+								th:selected="${position.positionName eq user.userPosition}" 
 								th:value="${position.positionName}" th:text="${position.positionName}"/>
 						</select>
+					</div>
+				</div>
+				<div class="layui-form-item">
+					<label class="layui-form-label">
+						指定角色
+					</label>
+					<div class="layui-input-block">
+						<input type="checkbox" name="userRoles" lay-skin="primary" 
+							th:each="role,status : ${roles}" 
+							th:checked="${role.selected} == true" 
+							th:title="${role.roleName}" th:value="${role.roleId}">
 					</div>
 				</div>
 				
@@ -170,7 +180,7 @@
 					<div id="confire" class="layui-form-mid layui-word-aux ">
 						两次密码必须一致</div>
 				</div>
-		
+				
 				<div class="layui-form-item">
 					<label for="L_repass" class="layui-form-label"> </label>
 					<button id="editUser" class="layui-btn" lay-filter="add" lay-submit="">
@@ -191,6 +201,22 @@
 				$("#date1").val(new Date($("#date1").val()).format("yyyy-MM-dd"))	
 			}
 		});
+		
+		$.fn.serializeObject = function() {
+			var o = {};
+			var a = this.serializeArray();
+			$.each(a, function() {
+				if(o[this.name]) {
+					if(!o[this.name].push) {
+						o[this.name] = [o[this.name]];
+					}
+					o[this.name].push(this.value || '');
+				} else {
+					o[this.name] = this.value || '';
+				}
+			});
+			return o;
+		};
 		
 		function onlyUser(doms){
     		if($("#userAccount").val().length<3){
@@ -254,12 +280,10 @@
 	    		trigger: 'click'
 	  		});
 	        
-	        //alert($("[name=userDepartement]").val());
-	        
 			//自定义验证规则
 			form.verify({
 				nikename: function(value){
-					if(value.length < 5){
+					if(value.length < 3){
 						return '昵称至少得5个字符啊';
 					}
 				},
@@ -293,10 +317,12 @@
 	            //发异步，把数据提交给php
 	            console.log(data);
 	            $.ajax({
+	        		url :"/account/doUserEdit",
 	        		type : "POST",
+	        		//contentType: "application/json",
+	        		//data : JSON.stringify($("#form1").serializeObject()),
 	        		data : $('#form1').serialize(),
 	        		dataType : "text",
-	        		url :"/account/doUserEdit",
 	        		success : function(data) {
 	        			var result = eval("(" + data + ")");
 	        			if (result.status == 200) {
