--- a/sb_erp/src/main/resources/templates/organization/positionEdit.html
+++ b/sb_erp/src/main/resources/templates/organization/positionEdit.html
@@ -21,13 +21,15 @@
 	</head>
 <body>
 	<div class="x-body">
-		<form id="form1" class="layui-form layui-form-pane">
+		<form id="form1" class="layui-form layui-form-pane" th:object="${position}">
+			<input type="hidden" th:value="${position.positionId}" name="positionId"/>
 			<div class="layui-form-item">
 				<label for="name" class="layui-form-label"> <span
 					class="x-red">*</span>职位名称
 				</label>
 				<div class="layui-input-inline">
-					<input id="positionName" type="text" name="positionName"
+					<input id="positionName" type="text" name="positionName" 
+						th:value="${position.positionName}" 
 						required="" lay-verify="required|repeat" autocomplete="off"
 						class="layui-input">
 				</div>
@@ -39,7 +41,8 @@
 					class="x-red">*</span>职位描述
 				</label>
 				<div class="layui-input-inline">
-					<input type="text" name="positionDescription"
+					<input type="text" name="positionDescription" 
+						th:value="${position.positionDescription}" 
 						required="" lay-verify="required" autocomplete="off"
 						class="layui-input">
 				</div>
@@ -51,6 +54,7 @@
 				<div class="layui-input-inline">
 					<select name="departName">
 						<option th:each="department,departmentStatus : ${departments}" 
+							th:selected="${department.departName} == ${position.departName}" 
 							th:value="${department.departName}" th:text="${department.departName}"></option>
 					</select>
 				</div>
@@ -64,64 +68,64 @@
 	</div>
 </body>
 <script type="text/javascript">
-var isRepeat=false;
-layui.use(['form', 'layedit', 'laydate'], function(){
-	var form = layui.form,
-	layer = layui.layer,
-	layedit = layui.layedit,
-	laydate = layui.laydate;
-  
-	//创建一个编辑器
-	var editIndex = layedit.build('LAY_demo_editor');
- 
-	//自定义验证规则
-	form.verify({
-		title: function(value){
-			if(value.length < 5){
-				return '标题至少得5个字符啊';
-			}
-		},
-		repeat:function(value){
-			if(value.length < 3){
-				return '至少三个字啊';
-			}else if(isRepeat){
-				return '名称已存在';  
-			}
-		},
-		content: function(value){
-			layedit.sync(editIndex);
-		}
-	});
-	
-	//监听提交
-	form.on('submit(add)', function(data){
-           console.log(data);
-           $.ajax({
-       		type : "POST",
-       		data : $('#form1').serialize(),
-       		dataType : "text",
-       		url :"/organization/doPositionAdd",
-       		success : function(data) {
-       			var result = eval("(" + data + ")");
-    			if (result.status == 200) {
-					layer.msg("修改成功",{
-						icon : 1,
-						time: 500,
-					},function () {
-						var index = parent.layer.getFrameIndex(window.name);
-						parent.location.reload();
-						parent.layer.close(index);
-					});
-				} else {
-					layer.msg(result.message, {icon: 0});
+	var isRepeat=false;
+	layui.use(['form', 'layedit', 'laydate'], function(){
+		var form = layui.form,
+		layer = layui.layer,
+		layedit = layui.layedit,
+		laydate = layui.laydate;
+	  
+		//创建一个编辑器
+		var editIndex = layedit.build('LAY_demo_editor');
+	 
+		//自定义验证规则
+		form.verify({
+			title: function(value){
+				if(value.length < 5){
+					return '标题至少得5个字符啊';
 				}
-       		},
-       		error : function() {
-       			layer.msg('无法连接服务器', {icon: 2});
-       		}
-       	});   
-		return false;
+			},
+			repeat:function(value){
+				if(value.length < 3){
+					return '至少三个字啊';
+				}else if(isRepeat){
+					return '名称已存在';  
+				}
+			},
+			content: function(value){
+				layedit.sync(editIndex);
+			}
+		});
+		
+		//监听提交
+		form.on('submit(add)', function(data){
+	           console.log(data);
+	           $.ajax({
+	       		type : "POST",
+	       		data : $('#form1').serialize(),
+	       		dataType : "text",
+	       		url :"/organization/doPositionEdit",
+	       		success : function(data) {
+	       			var result = eval("(" + data + ")");
+	    			if (result.status == 200) {
+						layer.msg("修改成功",{
+							icon : 1,
+							time: 500,
+						},function () {
+							var index = parent.layer.getFrameIndex(window.name);
+							parent.location.reload();
+							parent.layer.close(index);
+						});
+					} else {
+						layer.msg(result.message, {icon: 0});
+					}
+	       		},
+	       		error : function() {
+	       			layer.msg('无法连接服务器', {icon: 2});
+	       		}
+	       	});   
+			return false;
+		});
 	});
-});
 </script>
 </html>
