--- a/sb_erp/src/main/resources/templates/common/register.html
+++ b/sb_erp/src/main/resources/templates/common/register.html
@@ -13,7 +13,6 @@
 	    <!-- 引入内部js或css -->
 		<script th:src="${'/lib/layui/layui.js'}" type="text/javascript" charset="utf-8"></script>
 		<script th:src="${'/js/xadmin.js'}" type="text/javascript"></script>
-		<script th:src="${'/js/erp.js'}" type="text/javascript"></script>
 		<link th:href="${'/css/font.css'}" rel="stylesheet">
 		<link th:href="${'/css/xadmin.css'}" rel="stylesheet">
 	</head>
@@ -40,4 +39,32 @@
 			</form>
 		</div>
 	</body>
+	<script>
+		/*
+		 * 用户注册
+		 */
+		$("#registerButton").bind("click", function() {
+			var user = {};
+			user.account = $("[name='account']").val();
+			user.password = $("[name='password']").val();
+			var layer = layui.layer;
+			$.ajax({
+				url : "/doRegister",
+				type : "post",
+				contentType: "application/json",
+				data : JSON.stringify(user),
+				success : function (data) {
+					if (data.status == 200) {
+						// todo
+						location.href = "/login";
+					} else {
+						layer.msg(data.message, {icon: 0});
+					}
+				},
+				error : function (data) {
+					layer.msg(data.responseText, {icon: 0});
+				}
+			});
+		});
+	</script>
 </html>
