--- a/sb_erp/src/main/resources/templates/property/propertyList.html
+++ b/sb_erp/src/main/resources/templates/property/propertyList.html
@@ -1,95 +1,115 @@
-<section>
-	<div class="x-nav">
-		<span class="layui-breadcrumb"> <a>库存管理</a> <a> <cite>资产情况</cite></a>
-		</span> <a class="layui-btn layui-btn-small"
-			style="line-height: 1.6em; margin-top: 3px; float: right"
-			href="propertyController/showAllProperty.do" title="刷新"> <i
-			class="layui-icon" style="line-height: 30px">ဂ</i></a>
-	</div>
-	<div class="x-body">
-		<div class="layui-row">
-			<form class="layui-form layui-col-md12 x-so" method="post"
-				action="propertyController/showAllProperty.do">
-				<span>快速查询：</span>
-				<div class="layui-input-inline">
-					<select name="bigtypeName" id="quiz3" lay-filter="myselect2">
-						<option value="" selected="selected">请选择类型</option>
-						<option value="固定资产">固定资产</option>
-						<option value="非实物资产">非实物资产</option>
-						<option value="低值易耗损品">低值易耗损品</option>
-					</select>
-				</div>
-				<div class="layui-input-inline">
-					<select name="malltypeName" id="quiz4" lay-filter="myselect3">
-						<option value="" selected="selected">请选择分类</option>
-						<option value="固定资产">固定资产</option>
-						<option value="非实物资产">非实物资产</option>
-						<option value="低值易耗损品">低值易耗损品</option>
-					</select>
-				</div>
-				<div class="layui-input-inline">
-					<select name="propertyName" id="quiz1" lay-filter="myselect">
-						<option value="" selected="selected">请选择资产名字</option>
-					</select>
-				</div>
-				<div class="layui-input-inline">
-					<select name="type" id="quiz2">
-						<option value="">请选择型号</option>
-						<option value="杭州">杭州</option>
-						<option value="宁波" disabled="">宁波</option>
-						<option value="温州">温州</option>
-						<option value="温州">台州</option>
-						<option value="温州">绍兴</option>
-					</select>
-				</div>
-				<button type="submit" class="layui-btn" lay-submit="sreach()"
-					lay-filter="sreach">
-					<i class="layui-icon">&#xe615;</i>
-				</button>
-
-			</form>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"  
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"  
+      xmlns:shiro="http://www.pollix.at/thymeleaf/shiro">
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+		<TITLE>SpringDemo</TITLE>
+		<META name="description" content="THORNBIRD.COM"/>
+		
+		<!-- 引入外部js或css -->
+		<script th:src="@{https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js}"></script>
+		<!-- <script th:src="@{http://cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js}"></script> -->
+		
+		<!-- 引入内部js或css -->
+		<script th:src="${'/lib/layui/layui.js'}" charset="utf-8"></script>
+		<script th:src="${'/js/xadmin.js'}" type="text/javascript"></script>
+		<link th:href="${'/css/font.css'}" rel="stylesheet">
+		<link th:href="${'/css/xadmin.css'}" rel="stylesheet">
+	</head>
+	<body>
+		<div class="x-nav">
+			<span class="layui-breadcrumb"> <a>库存管理</a> <a> <cite>资产情况</cite></a>
+			</span> <a class="layui-btn layui-btn-small"
+				style="line-height: 1.6em; margin-top: 3px; float: right"
+				href="propertyController/showAllProperty.do" title="刷新"> <i
+				class="layui-icon" style="line-height: 30px">ဂ</i></a>
 		</div>
-
-		<xblock>
-		<button class="layui-btn" onclick="addProperty();">
-			<i class="layui-icon">&#xe608;</i>新增资产
-		</button>
-		<span class="x-right" style="line-height: 40px">共有数据：${propertysNum
-			} 条</span> </xblock>
-		<table class="layui-table">
-			<thead>
-				<tr>
-					<th>资产名称</th>
-					<th>型号</th>
-					<th>类型</th>
-					<th>分类</th>
-					<th>资产数量</th>
-					<th>操作</th>
-				</tr>
-			</thead>
-			<tbody>
-				<!-- 数据示例 -->
-				<tr>
-					<c:forEach items="${pageResult.dataList}" var="por"
-						varStatus="index">
-						<tr>
-							<td>${por.propertyName }</td>
-							<td>${por.type }</td>
-							<td>${por.bigtypeName }</td>
-							<td>${por.malltypeName }</td>
-							<td>${por.propertyNum }</td>
-							<td class="td-manage"><a title="删除"
-								class="layui-btn  layui-btn-mini layui-btn-danger"
-								onclick="member_del(this,'${por.propertyId}')"
-								href="javascript:;"> <i class="layui-icon">&#xe640;</i>删除
-							</a></td>
-
-						</tr>
-					</c:forEach>
-
-					<!-- end 数据示例 -->
-			</tbody>
-		</table>
-		<div align="center" id="jpager"></div>
-	</div>
-</section>
+		<div class="x-body">
+			<div class="layui-row">
+				<form class="layui-form layui-col-md12 x-so" method="post"
+					action="propertyController/showAllProperty.do">
+					<span>快速查询：</span>
+					<div class="layui-input-inline">
+						<select name="bigtypeName" id="quiz3" lay-filter="myselect2">
+							<option value="" selected="selected">请选择类型</option>
+							<option value="固定资产">固定资产</option>
+							<option value="非实物资产">非实物资产</option>
+							<option value="低值易耗损品">低值易耗损品</option>
+						</select>
+					</div>
+					<div class="layui-input-inline">
+						<select name="malltypeName" id="quiz4" lay-filter="myselect3">
+							<option value="" selected="selected">请选择分类</option>
+							<option value="固定资产">固定资产</option>
+							<option value="非实物资产">非实物资产</option>
+							<option value="低值易耗损品">低值易耗损品</option>
+						</select>
+					</div>
+					<div class="layui-input-inline">
+						<select name="propertyName" id="quiz1" lay-filter="myselect">
+							<option value="" selected="selected">请选择资产名字</option>
+						</select>
+					</div>
+					<div class="layui-input-inline">
+						<select name="type" id="quiz2">
+							<option value="">请选择型号</option>
+							<option value="杭州">杭州</option>
+							<option value="宁波" disabled="">宁波</option>
+							<option value="温州">温州</option>
+							<option value="温州">台州</option>
+							<option value="温州">绍兴</option>
+						</select>
+					</div>
+					<button type="submit" class="layui-btn" lay-submit="sreach()"
+						lay-filter="sreach">
+						<i class="layui-icon">&#xe615;</i>
+					</button>
+	
+				</form>
+			</div>
+	
+			<xblock>
+			<button class="layui-btn" onclick="x_admin_show('添加资源','/property/resourceAdd')">
+				<i class="layui-icon">&#xe608;</i>新增资产
+			</button>
+			<span class="x-right" style="line-height: 40px">共有数据：${propertysNum
+				} 条</span> </xblock>
+			<table class="layui-table">
+				<thead>
+					<tr>
+						<th>资产名称</th>
+						<th>型号</th>
+						<th>类型</th>
+						<th>分类</th>
+						<th>资产数量</th>
+						<th>操作</th>
+					</tr>
+				</thead>
+				<tbody>
+					<!-- 数据示例 -->
+					<tr>
+						<c:forEach items="${pageResult.dataList}" var="por"
+							varStatus="index">
+							<tr>
+								<td>${por.propertyName }</td>
+								<td>${por.type }</td>
+								<td>${por.bigtypeName }</td>
+								<td>${por.malltypeName }</td>
+								<td>${por.propertyNum }</td>
+								<td class="td-manage"><a title="删除"
+									class="layui-btn  layui-btn-mini layui-btn-danger"
+									onclick="member_del(this,'${por.propertyId}')"
+									href="javascript:;"> <i class="layui-icon">&#xe640;</i>删除
+								</a></td>
+	
+							</tr>
+						</c:forEach>
+	
+						<!-- end 数据示例 -->
+				</tbody>
+			</table>
+			<div align="center" id="jpager"></div>
+		</div>
+	</body>
+</html>
