--- a/sb_erp/src/main/resources/templates/property/propertyList.html
+++ b/sb_erp/src/main/resources/templates/property/propertyList.html
@@ -70,7 +70,7 @@
 			</div>
 	
 			<xblock>
-			<button class="layui-btn" onclick="x_admin_show('添加资源','/property/resourceAdd')">
+			<button class="layui-btn" onclick="x_admin_show('添加资源','/property/propertyAdd')">
 				<i class="layui-icon">&#xe608;</i>新增资产
 			</button>
 			<span class="x-right" style="line-height: 40px">共有数据：${propertysNum
