--- a/sb_erp/src/main/resources/templates/common/wellcome.html
+++ b/sb_erp/src/main/resources/templates/common/wellcome.html
@@ -1,6 +1,6 @@
 <section>
 	<div class="x-body">
-		<blockquote class="layui-elem-quote">欢迎进入企业资产管理系统！v1.0；登录时间：${LOGINTIME }；</blockquote>
+		<blockquote class="layui-elem-quote">欢迎进入企业资产管理系统！v1.0；登录时间：<span th:text="${loginTime}"></span></blockquote>
 		<fieldset class="layui-elem-field">
 			<legend>信息总览</legend>
 			<div class="layui-field-box">
@@ -17,15 +17,11 @@
 						</tr>
 						<tr>
 							<td>您的姓名</td>
-							<td>${user.userName }</td>
+							<td><span th:text="${user.userName}"></span></td>
 						</tr>
 						<tr>
 							<td>您的登录时间</td>
-							<td>${LOGINTIME }</td>
-						</tr>
-						<tr>
-							<td>您的浏览器信息</td>
-							<td id="browserVersion"></td>
+							<td><span th:text="${loginTime}"></span></td>
 						</tr>
 						<tr>
 							<td>您的IP地址</td>
@@ -42,30 +38,15 @@
 					<tbody>
 						<tr>
 							<th width="30%">本系统访问路径</th>
-							<td><span id="lbServerName"><%=basePath %></span></td>
+							<td><span th:text="${loacalUrl}"></span></td>
 						</tr>
 						<tr>
 							<td>服务器名称</td>
-							<td>${serverName }</td>
+							<td><span th:text="${serverName}"></span></td>
 						</tr>
 						<tr>
 							<td>服务器ip地址</td>
-							<td>${localIp }</td>
-						</tr>
-						<tr class="spanLinkTr">
-							<td>当前在线人数</td>
-							<td><span id="sasd">加载中...</span>&nbsp; <span id="ronBtn" onclick="reOnlineNum()" class="spanLink">点击刷新</span>
-							</td>
-						</tr>
-						<tr>
-							<td>登录超时时间</td>
-							<td>${timeout }秒</td>
-						</tr>
-						<tr class="spanLinkTr">
-							<td>服务器当前时间</td>
-							<td><span id="st">加载中...</span>&nbsp; <span id="rstBtn"
-								onclick="reServerTime()" class="spanLink">点击刷新</span>
-							</td>
+							<td><span th:text="${localIp}"></span></td>
 						</tr>
 					</tbody>
 				</table>
