--- a/sb_erp/src/main/resources/templates/organization/departmentEdit.html
+++ b/sb_erp/src/main/resources/templates/organization/departmentEdit.html
@@ -53,7 +53,7 @@
 						class="layui-input">
 				</div>
 			</div>
-			<div class="layui-form-item layui-form-text">
+			<!-- <div class="layui-form-item layui-form-text">
 				<label class="layui-form-label"> 权限信息 </label>
 				<table class="layui-table layui-input-block">
 					<tbody>
@@ -74,7 +74,7 @@
 						</tr>
 					</tbody>
 				</table>
-			</div>
+			</div> -->
 			<div class="layui-form-item" style="text-align: center;">
 
 				<a class="layui-btn" lay-filter="add" lay-submit=""> 确定 </a> <a
