--- a/sb_erp/src/main/resources/templates/account/userList.html
+++ b/sb_erp/src/main/resources/templates/account/userList.html
@@ -222,8 +222,8 @@
 						    str+="<td>"+val.userName+"</td>"
 						    str+="<td>"+val.userDepartement+"</td>"
 						    str+="<td>"+val.userPosition+"</td>"
-						    str+="<td>"+new Date(val.userEntrytime).format("yyyy-MM-dd hh:mm")+"</td>"
-						    str+="<td>"+new Date(val.userBirthday).format("yyyy-MM-dd hh:mm")+"</td>"
+						    str+="<td>"+new Date(val.userEntrytime).format("yyyy-MM-dd")+"</td>"
+						    str+="<td>"+new Date(val.userBirthday).format("yyyy-MM-dd")+"</td>"
 						    str+="<td>"+val.userTelephone+"</td>"
 						    str+="<td>"+val.userEmail+"</td>"
 						    str+="<td><a class=\"layui-btn  layui-btn-mini\" onclick=\"x_admin_show('修改','/account/userEdit?userId="+val.userId+"')\" ><i class=\"layui-icon\">&#xe642;</i>编辑</a><button onclick=\"delUser('"+val.userId+"')\" class=\"layui-btn  layui-btn-mini layui-btn-danger\"><i class=\"layui-icon\">&#xe640;</i>删除</button></td>"
