--- a/sb_erp/src/main/resources/templates/fragments/header.html
+++ b/sb_erp/src/main/resources/templates/fragments/header.html
@@ -91,67 +91,11 @@
 					</a>
 					<ul class="sub-menu">
 						<li>
-							<a _href="/property/grantProperty">
+							<a _href="/property/grantPropertyListPage">
 								<i class="iconfont">&#xe6a7;</i>
-								<cite>在用资产</cite>
+								<cite>我的资产</cite>
 							</a>
 						</li>
-						<li>
-							<a _href="/property/propertyApply">
-								<i class="iconfont">&#xe6a7;</i>
-								<cite>资产申请</cite>
-							</a>
-						</li>
-						<li>
-							<a _href="/property/propertyPurchase">
-								<i class="iconfont">&#xe6a7;</i>
-								<cite>资产采购</cite>
-							</a>
-						</li>
-						<li>
-							<a _href="/property/propertyDiscard">
-								<i class="iconfont">&#xe6a7;</i>
-								<cite>资产报废</cite>
-							</a>
-						</li>
-					</ul>
-				</li>
-				
-				<li shiro:hasAnyRoles="admin,manager">
-					<a href="javascript:;"> 
-						<i class="iconfont">&#xe602;</i> 
-					 	<cite>流程管理</cite>
-						<i class="iconfont nav_right">&#xe697;</i>
-					</a>
-					<ul class="sub-menu">
-						<li>
-							<a _href="/property/purchaseFlow">
-								<i class="iconfont">&#xe6a7;</i>
-								<cite>资产采购批准</cite>
-							</a>
-						</li>
-						<li>
-							<a _href="/property/applyFlow">
-								<i class="iconfont">&#xe6a7;</i>
-								<cite>资产申请批准</cite>
-							</a>
-						</li>
-						<li>
-							<a _href="/property/discardFlow">
-								<i class="iconfont">&#xe6a7;</i>
-								<cite>资产报废批准</cite>
-							</a>
-						</li>
-					</ul>
-				</li>
-				
-				<li shiro:hasAnyRoles="admin,manager">
-					<a href="javascript:;"> 
-						<i class="iconfont">&#xe613;</i> 
-						<cite>库存管理</cite>
-						<i class="iconfont nav_right">&#xe697;</i>
-					</a>
-					<ul class="sub-menu">
 						<li>
 							<a _href="/property/propertyList">
 								<i class="iconfont">&#xe6a7;</i>
@@ -162,6 +106,28 @@
 							<a _href="/property/propertyRecord">
 								<i class="iconfont">&#xe6a7;</i>
 								<cite>资产流动记录</cite>
+							</a>
+						</li>
+					</ul>
+				</li>
+				
+				<li>
+					<a href="javascript:;"> 
+						<i class="iconfont">&#xe607;</i> 
+						<cite>流程管理</cite>
+						<i class="iconfont nav_right">&#xe697;</i>
+					</a>
+					<ul class="sub-menu">
+						<li>
+							<a _href="/property/applyListPage">
+								<i class="iconfont">&#xe6a7;</i>
+								<cite>我的申请</cite>
+							</a>
+						</li>
+						<li>
+							<a _href="/property/flowListPage">
+								<i class="iconfont">&#xe6a7;</i>
+								<cite>申请批准</cite>
 							</a>
 						</li>
 					</ul>
