--- a/sb_erp/src/main/resources/templates/flow/applyAdd.html
+++ b/sb_erp/src/main/resources/templates/flow/applyAdd.html
@@ -110,7 +110,7 @@
 			form.on('submit(add)', function(data){
 				console.log(data);
 				$.ajax({
-		       		url :"/property/addApply",
+		       		url :"/flow/addApply",
 					type : "POST",
 					dataType : "text",
 		       		data : $('#form1').serialize(),
