--- a/sb_erp/src/main/resources/templates/flow/flowEdit.html
+++ b/sb_erp/src/main/resources/templates/flow/flowEdit.html
@@ -124,7 +124,7 @@
 				console.log(data);
 				$('#approveDesc').val($('#approveDescText').val());
 				$.ajax({
-		       		url :"/property/editFlow",
+		       		url :"/flow/editFlow",
 					type : "POST",
 					dataType : "text",
 		       		data : $('#form1').serialize(),
