--- a/sb_erp/src/main/resources/templates/fragments/header.html
+++ b/sb_erp/src/main/resources/templates/fragments/header.html
@@ -97,15 +97,15 @@
 							</a>
 						</li>
 						<li>
-							<a _href="/property/propertyList">
+							<a _href="/property/scrapPropertyListPage">
 								<i class="iconfont">&#xe6a7;</i>
-								<cite>资产库存</cite>
+								<cite>报废库存</cite>
 							</a>
 						</li>
 						<li>
-							<a _href="/property/propertyRecord">
+							<a _href="/property/propertyListPage">
 								<i class="iconfont">&#xe6a7;</i>
-								<cite>资产流动记录</cite>
+								<cite>资产库存</cite>
 							</a>
 						</li>
 					</ul>
@@ -119,13 +119,13 @@
 					</a>
 					<ul class="sub-menu">
 						<li>
-							<a _href="/property/applyListPage">
+							<a _href="/flow/applyListPage">
 								<i class="iconfont">&#xe6a7;</i>
 								<cite>我的申请</cite>
 							</a>
 						</li>
 						<li>
-							<a _href="/property/flowListPage">
+							<a _href="/flow/flowListPage">
 								<i class="iconfont">&#xe6a7;</i>
 								<cite>申请批准</cite>
 							</a>
