--- a/sb_erp/src/main/resources/templates/flow/applyEdit.html
+++ b/sb_erp/src/main/resources/templates/flow/applyEdit.html
@@ -113,7 +113,7 @@
 			form.on('submit(add)', function(data){
 				console.log(data);
 				$.ajax({
-		       		url :"/property/editApply",
+		       		url :"/flow/editApply",
 					type : "POST",
 					dataType : "text",
 		       		data : $('#form1').serialize(),
