--- a/sb_erp/src/main/resources/templates/flow/applyList.html
+++ b/sb_erp/src/main/resources/templates/flow/applyList.html
@@ -20,11 +20,11 @@
 		<div class="x-nav">
 			<span class="layui-breadcrumb">
 				<a>资产管理</a>
-				<a> <cite>申请批准</cite></a>
+				<a> <cite>我的申请</cite></a>
 			</span>
 			<a class="layui-btn layui-btn-small"
 				style="line-height: 1.6em; margin-top: 3px; float: right"
-				href="/property/flowListPage" title="刷新"> <i
+				href="/flow/applyListPage" title="刷新"> <i
 				class="layui-icon" style="line-height: 30px">ဂ</i></a>
 		</div>
 		<div class="x-body">
@@ -37,6 +37,14 @@
 							<option value="">申请类型</option>
 							<option th:each="applyType : ${applyTypes}" 
 								th:value="${applyType}" th:text="${applyType}">
+							</option>
+						</select>
+					</div>
+					<div class="layui-input-inline">
+						<select name="propertyType" lay-filter="myselect2">
+							<option value="">资产类型</option>
+							<option th:each="propertyType : ${propertyTypes}" 
+								th:value="${propertyType}" th:text="${propertyType}">
 							</option>
 						</select>
 					</div>
@@ -56,20 +64,24 @@
 				</form>
 			</div>
 	
-			<span class="x-right" style="line-height: 40px">共有数据：<a id="total">0</a> 条</span>
+			<xblock>
+				<button class="layui-btn"
+					onclick="x_admin_show('添加用户','/flow/addApplyPage')">
+					<i class="layui-icon"></i>添加申请
+				</button>
+				<span class="x-right" style="line-height: 40px">共有数据：<a id="total">88</a> 条</span>
+			</xblock>
 			<table class="layui-table">
 				<thead>
 					<tr>
 						<th>申请类别</th>
 						<th>资产名称</th>
+						<th>资产类型</th>
 						<th>资产型号</th>
 						<th>资产数量</th>
 						<th>申请状态</th>
 						<th>申请人</th>
 						<th>申请时间</th>
-						<th>批准人</th>
-						<th>批准时间</th>
-						<th>批准备注</th>
 						<th>操作</th>
 					</tr>
 				</thead>
@@ -101,7 +113,7 @@
 						applyId:applyId
 					},
 					dataType : "text",
-					url : "/property/deleteApply",
+					url : "/flow/deleteApply",
 					success : function(data) {
 						var result = eval("(" + data + ")");
 		    			if (result.status == 200) {
@@ -168,7 +180,7 @@
 						currentPage:n
 					},
 					dataType : "text",
-					url : "/property/applies",
+					url : "/flow/applies",
 					success : function(result) {
 						console.log(result);
 						var tl = eval("(" + result + ")");
@@ -186,6 +198,7 @@
 							    str+="<tr>";
 							    str+="<td>"+val.applyType+"</td>"
 							    str+="<td>"+val.propertyName+"</td>"
+							    str+="<td>"+val.propertyType+"</td>"
 							    str+="<td>"+val.propertyModel+"</td>"
 							    str+="<td>"+val.propertyNum+"</td>"
 							    if (val.applyStatus == "批准") {
@@ -195,21 +208,22 @@
 							    	str+="<td class='td-status'><span class='layui-btn layui-btn-normal layui-btn-mini layui-btn-disabled'>"
 							    		+val.applyStatus+"</span></td>"
 							    }
-							    str+="<td>"+val.applyUserName+"</td>"
+							    var applyUserName = "";
+							    if (val.applyUserName != 'null') {
+							    	applyUserName = val.applyUserName;
+							    }
+							    str+="<td>"+applyUserName+"</td>"
 							    str+="<td>"+new Date(val.applyDate).format("yyyy-MM-dd")+"</td>"
-							    str+="<td>"+getDefaultString(val.approveUserName)+"</td>"
-							    str+="<td>"+getDefaultDateString(val.approveDate)+"</td>"
-							    str+="<td>"+getLimitString(val.approveDesc)+"</td>"
 							    if (val.applyStatus == '审核中') {
-								    str+="<td><a class=\"layui-btn layui-btn-mini\" onclick=\"x_admin_show('修改','/property/editFlowPage?applyId="+val.applyId+"')\" ><i class=\"layui-icon\">&#xe642;</i>编辑</a></td>"
+								    str+="<td><a class=\"layui-btn layui-btn-mini\" onclick=\"x_admin_show('修改','/flow/editApplyPage?applyId="+val.applyId+"')\" ><i class=\"layui-icon\">&#xe642;</i>编辑</a> <button onclick=\"delApply('"+val.applyId+"')\" class=\"layui-btn layui-btn-mini layui-btn-danger\"><i class=\"layui-icon\">&#xe640;</i>删除</button></td>"
 							    } else {
-							    	str+="<td>该申请已完结</td>"
+								    str+="<td>该申请已完结</td>"
 							    }
 							    str+="</tr>";
 								$("#applies").append(str);
 							})
 						}else{
-							$("#applies").append("<tr><td colspan=8 align=\"center\">暂时没有数据哦，快去添加一条吧</td></tr>");
+							$("#applies").append("<tr><td colspan=9 align=\"center\">暂时没有数据哦，快去添加一条吧</td></tr>");
 						}
 						
 					},
