--- a/sb_erp/src/main/resources/templates/flow/flowList.html
+++ b/sb_erp/src/main/resources/templates/flow/flowList.html
@@ -20,22 +20,23 @@
 		<div class="x-nav">
 			<span class="layui-breadcrumb">
 				<a>资产管理</a>
-				<a> <cite>库存资产</cite></a>
+				<a> <cite>申请批准</cite></a>
 			</span>
 			<a class="layui-btn layui-btn-small"
 				style="line-height: 1.6em; margin-top: 3px; float: right"
-				href="/property/propertyListPage" title="刷新"> <i
+				href="/flow/flowListPage" title="刷新"> <i
 				class="layui-icon" style="line-height: 30px">ဂ</i></a>
 		</div>
 		<div class="x-body">
 			<div class="layui-row">
 				<form id="form1" class="layui-form layui-col-md12 x-so">
+					<input type="hidden" th:value="${user.userId}" name="userId"/>
 					<span>快速查询：</span>
 					<div class="layui-input-inline">
-						<select name="propertyType" lay-filter="myselect2">
-							<option value="">资产类型</option>
-							<option th:each="propertyType : ${propertyTypes}" 
-								th:value="${propertyType}" th:text="${propertyType}">
+						<select name="applyType" lay-filter="myselect2">
+							<option value="">申请类型</option>
+							<option th:each="applyType : ${applyTypes}" 
+								th:value="${applyType}" th:text="${applyType}">
 							</option>
 						</select>
 					</div>
@@ -51,21 +52,28 @@
 						lay-filter="sreach">
 						<i class="layui-icon">&#xe615;</i>
 					</button>
+	
 				</form>
 			</div>
 	
-			<span class="x-right" style="line-height: 40px">共有数据：<a id="total">88</a> 条</span>
+			<span class="x-right" style="line-height: 40px">共有数据：<a id="total">0</a> 条</span>
 			<table class="layui-table">
 				<thead>
 					<tr>
+						<th>申请类别</th>
 						<th>资产名称</th>
-						<th>类型</th>
-						<th>型号</th>
-						<th>数量</th>
-						<th>总价</th>
+						<th>资产型号</th>
+						<th>资产数量</th>
+						<th>申请状态</th>
+						<th>申请人</th>
+						<th>申请时间</th>
+						<th>批准人</th>
+						<th>批准时间</th>
+						<th>批准备注</th>
+						<th>操作</th>
 					</tr>
 				</thead>
-				<tbody id="properties">
+				<tbody id="applies">
 					<tr>
 						<td colspan=8>加载中<i class="layui-icon">&#xe63e;</i></td>
 					</tr>
@@ -75,12 +83,45 @@
 		</div>
 	</body>
 	<script type="text/javascript">
+		var applyType=null;
 		var propertyType=null;
 		var propertyModel=null;
 		var propertyName=null;
 		var userId=0;
 		var total=0;
 		var limit=0;
+		
+		//删除操作
+		function delApply(applyId){
+			layer.confirm('你确定要删除吗?', {icon: 3, title:'提示'}, function(index){
+				$.ajax({
+					type : "POST",
+					async:false,
+					data : {
+						applyId:applyId
+					},
+					dataType : "text",
+					url : "/flow/deleteApply",
+					success : function(data) {
+						var result = eval("(" + data + ")");
+		    			if (result.status == 200) {
+							layer.msg("修改成功",{
+								icon : 1,
+								time: 500,
+							},function () {
+								location.replace(location.href)
+							});
+						} else {
+							layer.msg(result.message, {icon: 0});
+						}
+					},
+					error : function() {
+						layer.msg('无法连接服务器', {icon: 2});
+					}
+				});
+			    layer.close(index);
+			});
+		}
 		
 		layui.use(['form', 'laypage', 'laydate'], function(){
 			var form = layui.form,
@@ -91,6 +132,7 @@
 			form.on('submit(sreach)', function(data){
 				console.log(data);
 				
+				applyType=$("[name=applyType]").val();
 				propertyType=$("[name=propertyType]").val();
 				propertyModel=$("[name=propertyModel]").val();
 				propertyName=$("[name=propertyName]").val();
@@ -118,6 +160,7 @@
 					type : "POST",
 					async:false,
 					data : {
+						applyType:applyType,
 						propertyType:propertyType,
 						propertyModel:propertyModel,
 						propertyName:propertyName,
@@ -125,7 +168,7 @@
 						currentPage:n
 					},
 					dataType : "text",
-					url : "/property/properties",
+					url : "/flow/applies",
 					success : function(result) {
 						console.log(result);
 						var tl = eval("(" + result + ")");
@@ -134,23 +177,39 @@
 							limit=tl.pageSize;
 							$("#total").text(total);
 						}
-						$("#properties").html("");
+						$("#applies").html("");
 						//json遍历
 						if(tl.list.length>0){
 							$.each(tl.list, function(n,val){
 								console.log(n);
 								var str="";
 							    str+="<tr>";
+							    str+="<td>"+val.applyType+"</td>"
 							    str+="<td>"+val.propertyName+"</td>"
-							    str+="<td>"+val.propertyType+"</td>"
 							    str+="<td>"+val.propertyModel+"</td>"
 							    str+="<td>"+val.propertyNum+"</td>"
-							    str+="<td>"+val.totalPrice+"</td>"
+							    if (val.applyStatus == "批准") {
+							    	str+="<td class='td-status'><span class='layui-btn layui-btn-normal layui-btn-mini'>"
+							    		+val.applyStatus+"</span></td>"
+							    } else {
+							    	str+="<td class='td-status'><span class='layui-btn layui-btn-normal layui-btn-mini layui-btn-disabled'>"
+							    		+val.applyStatus+"</span></td>"
+							    }
+							    str+="<td>"+val.applyUserName+"</td>"
+							    str+="<td>"+new Date(val.applyDate).format("yyyy-MM-dd")+"</td>"
+							    str+="<td>"+getDefaultString(val.approveUserName)+"</td>"
+							    str+="<td>"+getDefaultDateString(val.approveDate)+"</td>"
+							    str+="<td>"+getLimitString(val.approveDesc)+"</td>"
+							    if (val.applyStatus == '审核中') {
+								    str+="<td><a class=\"layui-btn layui-btn-mini\" onclick=\"x_admin_show('修改','/flow/editFlowPage?applyId="+val.applyId+"')\" ><i class=\"layui-icon\">&#xe642;</i>编辑</a></td>"
+							    } else {
+							    	str+="<td>该申请已完结</td>"
+							    }
 							    str+="</tr>";
-								$("#properties").append(str);
+								$("#applies").append(str);
 							})
 						}else{
-							$("#properties").append("<tr><td colspan=8 align=\"center\">暂时没有数据哦，快去添加一条吧</td></tr>");
+							$("#applies").append("<tr><td colspan=8 align=\"center\">暂时没有数据哦，快去添加一条吧</td></tr>");
 						}
 						
 					},
